swagger redirection issue solved
