# app/Http/Controllers/AuthController.php
@@ -34,49 +34,7 @@ class AuthController extends Controller
         session(['oauthState' => $oauthClient->getState()]);
         return response()->json(["link" => $authUrl]);
     }
-    /**
-     * @OA\Post(
-     ** path="/signout",
-     *   tags={"AuthController"},
-     *   summary="signouts user",
-     *   operationId="signout",
-     *
-     *  @OA\RequestBody(
-     *  @OA\JsonContent(
-     *
-     *  @OA\Property(property="user_id", type="integer"),
-     *  @OA\Property(property="token", type="string"),
-     *
-     *
-     *  )),
 
-
-     *   @OA\Response(
-     *      response=200,
-     *       description="Logged out",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      ),
-     *
-     *)
-     **/
     public function signout(Request $request)
     {
         $tokenCache = new TokenCache();
